2009-02-24  Les Harris  <lharris@gnome.org>

	* src/mud-connections.c (mud_connections_init),
	(mud_connections_finalize), (mud_connections_qconnect_cb),
	(mud_connections_delete_cb), (mud_connections_properties_cb): Closed
	some memory leaks. Now deletes characters properly without deleting
	the entire mud. Added quick connect.
	* src/mud-telnet-msp.c (mud_telnet_msp_parse),
	(mud_telnet_msp_get_files): Disabled Zone in filepath for now since
	all MSP muds seems to ignore the standard.
	* src/mud-telnet.h: Increased subreq buffer to 2k
	* ui/muds.glade: Added quickconnect ui.

2009-02-24  Les Harris  <lharris@gnome.orgiew_reconnect),
	(mud_connection_view_send), (mud_connection_view_new),
	(mud_connection_view_queue_download): GConfClient Leak Fix
	* src/mud-preferences-window.c
	(mud_preferences_window_trigger_select_cb),
	(mud_preferences_window_alias_select_cb),
	(mud_preferences_window_trigger_enabled_toggle_cb),
	(mud_preferences_window_trigger_gag_toggle_cb),
	(mud_preferences_window_alias_enabled_toggle_cb),
	(mud_preferences_window_trigger_del_cb),
	(mud_preferences_window_alias_del_cb),
	(mud_preferences_window_trigger_ok_cb),
	(mud_preferences_window_alias_ok_cb),
	(mud_preferences_window_populate_trigger_treeview),
	(mud_preferences_window_populate_alias_treeview),
	(mud_preferences_window_update_proxy_combo): Formatting, Gconf Client
	Leak Fix
	* src/mud-profile.c (mud_profile_finalize), (mud_profile_delete),
	(mud_profile_new), (mud_profile_gconf_changed): Formatting,
	GconfClient Leak Fix
	* src/mud-telnet-handlers.c (MudHandler_ZMP_HandleSubNeg): GString
	fix.
	* src/mud-window.c (mud_window_finalize): GConfClient Leak Fix

2009-02-22  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_finalize),
	(mud_connection_view_disconnect), (mud_connection_view_reconnect),
	(mud_connection_view_network_event_cb): Closed memory leaks.
	* src/mud-log.c (mud_log_finalize), (mud_log_write), (mud_log_new):