@@ -1,3 +1,8 @@
+2009-02-27  Jordi Mallach  <jordi@sindominio.net>
+
+	* src/mud-window.c mud_window_about_cb): Add Les Harris to the
+	about dialog Copyright credits, and Mart Raudsepp to author credits.
+
 2009-02-24  Les Harris  <lharris@gnome.org>
 
 	* src/mud-connections.c (mud_connections_init),
